correção de texto, e inclusão de uma referencia

--- a/documents/sbc-template.bib
+++ b/documents/sbc-template.bib
@@ -15,6 +15,14 @@
   edition =	{2nd}
 }
 
+@Book{subramaniam:06,
+  author =	{Subramaniam, Hunt},
+  title =	{Practices of an Agile Developer},
+  publisher =	{The Pragmatic Bookshelf, Texas},
+  year =		{2006},
+  edition =	{1nd}
+}
+
 @misc{website:teamcity,
 	author = {JetBrains s.r.o.},
 	title = {Continous Integration for Everybody},
