--- a/documents/sbc-template.tex
+++ b/documents/sbc-template.tex
@@ -329,17 +329,12 @@ de ferramentas configuradas para tal função, como por exemplo a utilização do
 	\label{fig:workflow}
 \end{figure}
 
-You think water moves fast? You should see ice. 
-It moves like it has a mind. 
-Like it knows it killed the world once and got a taste for murder. 
-After the avalanche, it took us a week to climb out. 
-Now, I don't know exactly when we turned on each other, 
-but I know that seven of us survived the slide... and only five made it out. 
-Now we took an oath, that I'm breaking now. 
-We said we'd say it was the snow that killed the other two, 
-but it wasn't. 
-Nature is lethal but it doesn't hold a candle to man.
-(Figure~\ref{fig:workflow}).
+O \textit{workflow} apresentado na (Figura~\ref{fig:workflow}) demonstra a 
+integração entre o TDD e a utilização de \textit{pre-tested commits}, que pode
+ser configurado em um repositório separado, ou conforme a política de versionamento
+adotado, através de um \textit{branch} dedicado a availação e testes unitários e 
+de integração, para trazer uma garantia do funcionamento pleno das tarefas 
+implementadas, sem gerar também impacto no repositório principal.\\
 
 \begin{figure}[!htb]
 	\centering
@@ -347,6 +342,36 @@ Nature is lethal but it doesn't hold a candle to man.
 	\caption{Workflow TDD}
 	\label{fig:TDD}
 \end{figure}
+
+Na (Figura~\ref{fig:TDD}) encontra-se o teste no ambiente local do 
+desenvolvedor, que é responsável por implementar os testes unitários, 
+executá-los, além de efetuar os testes funcionais para validação da tarefa.\\
+Uma metodologia sugerida, é criar um branch local para a resolução de falhas, 
+ou implementação de uma nova tarefa, aproveitando a excelente capacidade do 
+merge do sistema de controle de versão Git. Segue o procedimento:
+
+\begin{enumerate}
+	\item 
+		Clone do repositório principal: \texttt{git clone "repositório"}
+	\item
+		Criar um branch para executar as alterações: 
+		\texttt{git branch -d "funcionalidadeX"}.
+ 	\item
+		Realizar as alterações, executar os testes unitários localmente, e 
+		realizar commits: \texttt{git commit -a}.
+ 	\item
+		Retornar ao repositório anterior: 
+		\texttt{git checkout "repositório"}.
+ 	\item
+		Atualizar o repositório: \texttt{git pull}.
+	\item
+		Merge entre o repositório principal e o branch "funcionalidadeX": 
+		\texttt{git merge "funcionalidadeX"}.
+	\item
+		Resolução de conflitos e execução dos testes unitários.
+	\item
+		Enviar o código ao repositório: \texttt{git push origin}.
+\end{enumerate}
 
 The path of the righteous man is beset on all sides by the 
 iniquities of the selfish and the tyranny of evil men. 
@@ -360,7 +385,7 @@ And you will know My name is the Lord when I lay My vengeance upon thee.
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=1.0\textwidth]{../processos/codeRevision.png}
-	\caption{Workflow Revis\~ao de Codigo}
+	\caption{Workflow Revisão de Código}
 	\label{fig:codeRevision}
 \end{figure}
 
